# chronodb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
crates/chronodb-cli/: Cargo.toml
crates/chronodb-cli/src/: cli.rs  lib.rs  main.rs
crates/chronodb-cli/tests/: persistence_integration.rs
crates/chronodb-core/: Cargo.toml
crates/chronodb-core/benches/: throughput.rs
crates/chronodb-core/src/: aggregate.rs  error.rs  lib.rs  partition.rs  point.rs  query.rs  retention.rs  series.rs  store.rs
crates/chronodb-store/: Cargo.toml
crates/chronodb-store/src/: codec.rs  lib.rs  wal.rs
docs/: architecture.md  query-model.md
docs/adr/: 0001-time-partitioned-storage.md  0002-windowed-aggregation.md  0003-retention-and-compaction.md  0004-append-only-persistence.md
scripts/: build.sh  demo.sh
