[package]
name = "chronodb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for chronodb."

[[bin]]
name = "chronodb"
path = "src/main.rs"

[dependencies]
chronodb-core = { path = "../chronodb-core" }
chronodb-store = { path = "../chronodb-store" }
clap.workspace = true
