[package]
name = "chronodb-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Append-only, file-backed persistence for chronodb behind a write-ahead-log trait."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
